# dog-breed-identification

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  setup.py  web_app.py
data/test/: .gitkeep
docs/: API_DOCUMENTATION.md  BCCK_Nhom_Firefly_Final.docx  DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md  README_TEST.md  So sánh chi tiết giữa ResNet50V2 và DenseNet.docx  TRAINING_EXPERIMENTS_REPORT.md  setup_instructions.md  ~$ sánh chi tiết giữa ResNet50V2 và DenseNet.docx
logs/: .gitkeep
models/: .gitkeep  transfer_learning_results.json
notebooks/: nhandiengiongcho_DenseNet.ipynb
results/: .gitkeep
src/: __init__.py  final_dog_breed_classifier.py  logger.py  simple_test.py  test_model.py  transfer_learning_training.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: __init__.py  test_classifier.py
